--- a/HTML/Resume/style.css
+++ b/HTML/Resume/style.css
@@ -7,7 +7,7 @@ body{
     background-color:rgba(223, 214, 214, 0.788);
 }
 header>h2{
-    text-align: center;margin-left: 92px;padding: 2px;
+    text-align: center;margin-left: 92px;padding: 15px;
 }
 .connect>.profile
 {
@@ -15,7 +15,7 @@ header>h2{
 }
 .connect
 {
-    margin-left: 47%;
+    margin-left: 47%;padding: 5px;
 }
 .items
 {
@@ -25,12 +25,14 @@ header>h2{
 {
     margin: 5px;
 }
-.items>h4 p
-{
-    padding: 1px;
+p{
+    padding: 2px;
 }
 .relevant>p
 {
     display: inline;
     padding: 2px;
+}
+h3{
+    padding: 5px;
 }
