--- a/CSS/EmailUpdate/style.css
+++ b/CSS/EmailUpdate/style.css
@@ -12,10 +12,10 @@
  text-align: center;
  background-color: rgba(111, 231, 231, 0.507);
 }
-.outer-box h3{
+h3{
     padding:2px;margin-top: 20px;font-size: 1.4rem;
 }
-.inner-box>form
+form
 {
     margin-top: 10px;
     margin-left: 10px;
