--- a/CSS/Grid/holy.css
+++ b/CSS/Grid/holy.css
@@ -16,13 +16,15 @@
                          " left main right"
                           " footer footer footer";
 }
-
 /* responsive design */
-/* .container{
+@media (max-width:440px)
+{
+.container{
     grid-template-columns: 100%;
     grid-template-rows: auto auto 1fr auto auto;
     grid-template-areas: "header""left" "main" "right" "footer";
-} */
+}
+}
 .header{
     grid-area: header;
     background: #000000c7;
