--- a/JAVASCRIPT/fetch_api/fetch_api.css
+++ b/JAVASCRIPT/fetch_api/fetch_api.css
@@ -10,6 +10,9 @@
     justify-content: center;
     align-items: center;
 }
+body{
+    background-color: rgba(160, 148, 108, 0.767);
+}
 .box
 {
     padding: 20px;
