--- a/CSS/Grid/holy.css
+++ b/CSS/Grid/holy.css
@@ -16,14 +16,19 @@
                          " left main right"
                           " footer footer footer";
 }
+li{list-style: none;display: inline-block;margin-inline: auto;}
+li a{text-decoration: none; color: white; font-family:Verdana, Geneva, Tahoma, sans-serif;font-size: 1.1rem;}
 /* responsive design */
 @media (max-width:440px)
 {
-.container{
+ .container
+  {
     grid-template-columns: 100%;
     grid-template-rows: auto auto 1fr auto auto;
     grid-template-areas: "header""left" "main" "right" "footer";
-}
+ }
+ li{list-style:none;display:block;}
+ li a{text-decoration: none; color: white; font-family:Verdana, Geneva, Tahoma, sans-serif;font-size: 1.1rem;}
 }
 .header{
     grid-area: header;
@@ -31,8 +36,6 @@
     text-align: center;
     padding: 20px;
 }
-li{list-style: none;display:inline-block ;}
-li a{padding: 35px;text-decoration: none; color: white; font-family:Verdana, Geneva, Tahoma, sans-serif;font-size: 1.1rem;}
 .left
 {
     grid-area: left;
