--- a/CSS/Grid/holy.css
+++ b/CSS/Grid/holy.css
@@ -16,7 +16,7 @@
                          " left main right"
                           " footer footer footer";
 }
-li{list-style: none;display: inline-block;margin-inline: auto;}
+li{list-style: none;display: inline-block;margin-inline:25px;}
 li a{text-decoration: none; color: white; font-family:Verdana, Geneva, Tahoma, sans-serif;font-size: 1.1rem;}
 /* responsive design */
 @media (max-width:440px)
