--- a/temperature-converter/style.css
+++ b/temperature-converter/style.css
@@ -8,7 +8,7 @@ body{
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    gap:auto;
+    height: 100vh;
 }
 .container
 {
