--- a/carousel/style.css
+++ b/carousel/style.css
@@ -61,3 +61,27 @@
     aspect-ratio: 16/9;
     object-fit: cover;
 }
+.carousel-nav
+{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 15px;
+  background-color:transparent;
+  position: absolute;
+  /* % is used for responsive gap */
+  gap:5%;
+  bottom: 1%;
+}
+.carousel-dot
+{
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+  background-color:rgba(216, 191, 216, 0.514);
+}
+.active
+{
+  background-color:white; 
+}
